crates/aven-parser/tests/fixtures/parser/valid/dedent-item-boundary.av
first = () =>
  value
second = 2
