crates/aven-parser/tests/fixtures/parser/invalid/single-item-pattern-tuple.av
value = result ?>
  (Ok(value),) => value
